# hashcrack

./: .gitignore  .gitmodules  CMakeLists.txt
include/: daemon.hpp  daemon_settings.hpp  daemon_spawn.hpp  hash_function.hpp
src/: daemon.cpp  daemon_settings.cpp  main.cpp
